--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,17 @@
 		rel="stylesheet" />
 
 	<script defer src='/build/bundle.js'></script>
+	<style>
+		html,
+		body {
+			margin: 0;
+			padding: 0;
+		}
+		h1, h2, h3, h4, h5 {
+			padding: 0;
+			margin: 0;
+		}
+	</style>
 </head>
 
 <body>
